@@ -18,8 +18,8 @@
 #include "chattextedit.h"
 #include "settings.h"
 #include "appinfo.h"
+#include "utilui.h"
 
-#include <QDateTime>
 #include <QDesktopServices>
 #include <QMenu>
 #include <QRegularExpression>
@@ -130,7 +130,7 @@ QString ChatTextEdit::getTimeStamp(const QDateTime& tm, bool force_ts)
 {
     QString dt;
     if(ttSettings->value(SETTINGS_DISPLAY_MSGTIMESTAMP, false).toBool() || force_ts)
-        dt = tm.toString(tr("yyyy-MM-dd HH:mm:ss")) + QString(" ");
+        dt = getFormattedDateTime(tm.toString("yyyy-MM-dd HH:mm:ss"), "yyyy-MM-dd HH:mm:ss") + QString(" ");
     return dt;
 }
 
