@@ -91,6 +91,8 @@ private:
     void slotSelectVideoText();
     void slotConfigureStatusBar();
     void slotUpdateUpdDlgChkBox();
+    QMenu* m_TSFVarMenu;
+    void insertTSFVariable();
     //connection tab
     void slotDesktopAccess();
     //sound tab
